fix: overflow and overscroll, hero darkening

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -14,13 +14,24 @@
     overflow: hidden; /* Prevent any overflow issues */
   }
 
+  .hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Darken the background */
+    z-index: 0; /* Place it behind the content */
+}
+
   .hero-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
   }
   
   .hero-content {
